--- a/templates/index.html
+++ b/templates/index.html
@@ -55,7 +55,7 @@
 <body>
     <div class="container">
         <h1>Welcome to Our Website</h1>
-        <a href="login.html" class="login-btn">Login</a>
+        <a href="/login.html" class="login-btn">Login</a>
     </div>
 </body>
 </html>
